<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_main"
           android:checkableBehavior="single">
        <item android:id="@+id/menu_alarms"
              android:title="@string/item_menu_alarms"
              android:icon="@drawable/ic_alarm"/>

        <item android:id="@+id/menu_timer"
              android:title="@string/item_menu_timer"
              android:icon="@drawable/ic_alarm"/>

        <item android:id="@+id/menu_stopwatch"
              android:title="@string/item_menu_stopwatch"
              android:icon="@drawable/ic_alarm"/>

        <item android:id="@+id/menu_achievements"
              android:title="@string/item_menu_achievements"
              android:icon="@drawable/ic_alarm"/>
    </group>


    <group android:id="@+id/menu_other"
           android:checkableBehavior="single">
        <item android:id="@+id/menu_settings"
              android:title="@string/item_menu_settings"
              android:icon="@drawable/ic_settings"/>
    </group>

</menu>